--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 
 <div class="calculadora">
     <p id="resultado" class="resultado"></p>
-    <table class="calculadora1">
+    <table>
             <tr>
-                <td><button id="limpar" class="butao" onclick="clean()">C</button></td>
-                <td><button class="butao" onclick="back()"('<')"><</button></td>
-                <td><button class="butao" onclick="insert('/')">/</button></td>
-                <td><button class="butao" onclick="insert('*')">X</button></td>
+                <td><button id="limpar" class="botao" onclick="clean()">C</button></td>
+                <td><button class="botao" onclick="back()"('<')"><</button></td>
+                <td><button class="botao" onclick="insert('/')">/</button></td>
+                <td><button class="botao" onclick="insert('*')">X</button></td>
             </tr>
             <tr>
-                <td><button class="butao" onclick="insert('7')">7</button></td>
-                <td><button class="butao" onclick="insert('8')">8</button></td>
-                <td><button class="butao" onclick="insert('9')">9</button></td>
-                <td><button class="butao" onclick="insert('-')">-</button></td>
+                <td><button class="botao" onclick="insert('7')">7</button></td>
+                <td><button class="botao" onclick="insert('8')">8</button></td>
+                <td><button class="botao" onclick="insert('9')">9</button></td>
+                <td><button class="botao" onclick="insert('-')">-</button></td>
             </tr>
             <tr>
-                <td><button class="butao" onclick="insert('4')">4</button></td>
-                <td><button class="butao" onclick="insert('5')">5</button></td>
-                <td><button class="butao" onclick="insert('6')">6</button></td>
+                <td><button class="botao" onclick="insert('4')">4</button></td>
+                <td><button class="botao" onclick="insert('5')">5</button></td>
+                <td><button class="botao" onclick="insert('6')">6</button></td>
                 <td rowspan="2"><button class="botao" onclick="insert('+')" style="height:106px;">+</button></td>
             </tr>
             <tr>
